--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -2,11 +2,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Example App</title>
-        <link href="../../../dist/styles/globals.css" rel="stylesheet">
+        <link href="/styles/globals.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Test</h1>
         {{{body}}}
-        <script src="../../../dist/bundle.js"></script>
+        <script src="/client.js"></script>
     </body>
 </html>
